--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,81 @@ body,
   height: 100%;
   width: 100%;
 }
+.header{
+  height: 50px;
+  background-color: turquoise;
+}
+
+main{
+  display: flex;
+}
+.contacts-container{
+  margin: 20px;
+  width: 350px;
+  text-align: center;
+  border: 1px solid black;
+  height: 850px;
+  
+  .contact-container{
+    text-align: start;
+    
+    margin: 15px;
+    margin-right: 15px;
+    margin-left: -25px;
+    height: 120px;
+    padding-top: 40px;
+
+   
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    border-left: 1px solid lightgray;
+    border-right: 1px solid lightgray;
+    display: flex;
+    .contact-container__image{
+      
+      height: 80px;
+      border-radius: 100%;
+      margin: 10px;
+    }
+  }
+
+}
+.userprofile-container{
+  display: flex;
+  margin: 20px;
+  width: 96%;
+  border: 1px solid black;
+  .userprofile-container__picture{
+    height: 80px;
+    margin-right: 20px;
+    margin: 10px;
+  }
+}
+.posts-container{
+  margin: 20px;
+  border: 1px solid black ;
+  h3{
+    text-align: center;
+  }
+  
+}
+.post-container{
+  border: 1px solid black;
+  margin: 20px;
+  margin-right: 50px;
+  padding: 10px;
+
+  /* justify-content: center; */
+ 
+}
+.navbar-div{
+  margin-left: 80%;
+  padding: 10px;
+  button{
+    margin: 5px;
+    border: none;
+    padding: 5px;
+    border-radius: 5px;
+  }
+}
+
